XWIKI-12189: Simplify the menus and add a drawer.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -904,6 +904,8 @@ core.menu.space.delete=Delete
 core.menu.view=View
 core.menu.print=Print
 core.menu.watch=Watch
+core.menu.toggleSearch=Toggle search
+core.menu.toggleNavigation=Toggle navigation
 
 ### Messages for the various document viewers (history, attachments, info...)
 core.viewers.content.doesnotexists.edittocreate=You can <a href="{0}">edit this page</a> to create it.
