--- a/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
@@ -182,6 +182,11 @@
       <artifactId>liquibase-core</artifactId>
       <version>2.0.5</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.jsqlparser</groupId>
+      <artifactId>jsqlparser</artifactId>
+      <version>0.9.3</version>
+    </dependency>
 
     <!-- UnexpectedException -->
     <dependency>
