XWIKI-12268: Adapt the "delete" action for nested documents. XWIKI-12421: Relook copy, rename, delete actions to have all menus.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1315,10 +1315,13 @@ activitystream.event.deleteComment.rss.body=A comment has been deleted from the 
 
 ### deleting a document
 core.delete=Delete
+core.delete.title=Delete {0}
 core.delete.backlinksWarning=The following documents contain links to the current page:{0}After deleting this document, those links will point to an empty page.
 core.delete.orphansWarning=The following documents have this document specified as a parent:{0}After deleting this document, they will become orphaned.
 core.delete.confirm=The deletion of a document is not reversible. Are you sure you wish to continue?
 core.delete.confirmWithInlinks=In addition, the deletion of a document is not reversible. Are you sure you wish to continue?
+core.delete.waitmessage=Please wait during the document is deleted.
+core.delete.success=The document has been deleted.
 
 core.recyclebin.showlistmsg=The following versions are in the recycle bin:
 core.recyclebin.deleter=Deleter
