XWIKI-12268: Adapt the "delete" action for nested documents.
* Add new translation keys

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1330,6 +1330,8 @@ core.delete.confirm=The deletion of a document is not reversible. Are you sure y
 core.delete.confirmWithInlinks=In addition, the deletion of a document is not reversible. Are you sure you wish to continue?
 core.delete.waitmessage=Please wait during the document is deleted.
 core.delete.success=The document has been deleted.
+core.delete.confirm.yes=Yes, please delete this document
+core.delete.confirm.no=No, take me back!
 
 core.recyclebin.showlistmsg=The following versions are in the recycle bin:
 core.recyclebin.deleter=Deleter
