XWIKI-12439: Add an xpage to display the children of a document.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1333,6 +1333,13 @@ core.delete.success=The document has been deleted.
 core.delete.confirm.yes=Yes, please delete this document
 core.delete.confirm.no=No, take me back!
 
+## Children of a document
+core.children.title=Children of {0}
+core.children.warningParentChild=Note: this page does not display the children based on the parent/child mechanism.
+core.children.terminalPage=This document is a terminal page that cannot have children.
+core.children.parentChildDescription=Documents having this page as parent:
+core.children.parentChildNoChild=This page does not have any child based on the parent/child mechanism.
+
 core.recyclebin.showlistmsg=The following versions are in the recycle bin:
 core.recyclebin.deleter=Deleter
 core.recyclebin.actions=Actions
