XWIKI-12440: Add an xpage to display the backlinks of a document.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1340,6 +1340,11 @@ core.children.terminalPage=This document is a terminal page that cannot have chi
 core.children.parentChildDescription=Documents having this page as parent:
 core.children.parentChildNoChild=This page does not have any child based on the parent/child mechanism.
 
+## Backlinks
+core.backlinks.title=Backlinks to {0}
+core.backlinks.description=Documents having a link to this page:
+core.backlinks.noBackLink=There is no backlink to this page.
+
 core.recyclebin.showlistmsg=The following versions are in the recycle bin:
 core.recyclebin.deleter=Deleter
 core.recyclebin.actions=Actions
