XWIKI-12438: ZipExplorer paths broken when support for Nested Spaces was introduced

--- a/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
@@ -865,6 +865,7 @@
               **/web/DeleteAction.java,
               **/web/DeleteAttachmentAction.java,
               **/web/DotAction.java,
+              **/web/DownloadAction.java,
               **/web/DownloadRevAction.java,
               **/web/EditAction.java,
               **/web/EditBean.java,
