XWIKI-12231: Add support for Nested Documents in the Create UI XWIKI-12431: Adapt the "rename" action for nested documents XWIKI-12217: Adapt the "copy" action for nested documents * Add support for selecting the target document from a tree picker.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -719,9 +719,10 @@ core.create.locationPreview.label=Location
 core.create.locationPreview.hint=Location in the page hierarchy where this new page will be created.
 core.create.spaceReference.label=Parent
 core.create.spaceReference.hint=Parent of the new page. Leave empty for top level page.
-core.create.identifier.label=Identifier
-core.create.identifier.hint=Identifier of the new page
-core.create.identifier.placeholder=NewPage
+core.create.spaceReference.placeholder=Path.To.Page
+core.create.name.label=Name
+core.create.name.hint=Name of the new page
+core.create.name.placeholder=NewPage
 
 core.create.template=Template
 core.create.page.template.hint=Template to use for the new page
@@ -733,7 +734,6 @@ core.create.template.allowedspace.inline=Allowed space for ''{0}'': {1}
 
 core.create.terminal.label=Terminal Page
 core.create.terminal.hint=Advanced: Create a terminal page instead. This type of page will not be able to have children and is generally used in applications, development or in older versions of XWiki.
-core.create.terminal.status=This is a terminal page
 
 core.create.ajax.error=An error occurred, please refresh the page and try again
 core.create.page.error.docalreadyexists=The page <a href="{1}">{0}</a> already exists. You can fill in a new page name (or <a href="{2}">edit {0}</a>).
@@ -741,18 +741,24 @@ core.create.space.error.docalreadyexists=The space {0} already exists. Please fi
 
 ### Rename
 core.rename.title = Rename <a href="{1}">{0}</a> 
-core.rename.sourcespace = Source Space
-core.rename.sourcespace.hint = Location of the original space
-core.rename.sourcepage = Source Page
-core.rename.sourcepage.hint = Location of the original page
-core.rename.inputPrompt=<new document name>
-core.rename.newspace=New space
-core.rename.newspace.hint=Containing space for the renamed page
-core.rename.newpage=New page
-core.rename.newpage.hint=Name of the renamed page
-core.rename.title.newName=New document name
-core.rename.title.updateDocs=Documents having backlinks to modify
-core.rename.title.updateChildren=Documents having this document as their parent
+core.rename.source.label=Source
+core.rename.source.hint=The page that is going to be renamed
+core.rename.children.label=Affect {0}{1} {1,choice,0#children|1#child|1<children}{2}
+core.rename.children.hint=Preserve the child pages by updating their path and moving them to the new location
+core.rename.links.label=Update {0}{1} {1,choice,0#links|1#link|1<links} to this page{2}
+core.rename.links.hint=Modify the links to the source page to target the new page
+core.rename.target.title.label=New Title
+core.rename.target.title.hint=The new page title
+core.rename.target.location.label=New Location
+core.rename.target.location.hint=The location were to move the page
+core.rename.target.wiki.label=Wiki
+core.rename.target.wiki.hint=The wiki where to move the page
+core.rename.target.parent.label=Parent
+core.rename.target.parent.hint=The new parent. Leave empty if the new page should be a top level page.
+core.rename.target.name.label=Name
+core.rename.target.name.hint=The new page name
+core.rename.target.terminal.label=Rename as terminal page
+core.rename.target.terminal.hint=This type of page cannot have children and is generally used in applications, development or in older versions of XWiki.
 core.rename.submit=Rename
 core.rename.success=Successfully renamed page {0} in space {3} to page <a href="{2}">{1}</a> in space {4}
 core.rename.emptyName=Please enter a valid page name!
@@ -764,24 +770,33 @@ rename=Rename
 ### Copy
 core.copy.title=Copy <a href="{1}">{0}</a>
 core.copy.copyingdoc=Page {0} successfully copied to {1}
-core.copy.sourcewiki=Source Wiki 
-core.copy.sourcewiki.hint=Location of the original wiki
-core.copy.sourcespace=Source Space
-core.copy.sourcespace.hint=Location of the original space
-core.copy.sourcepage=Source Page
-core.copy.sourcepage.hint=Location of the original page
-core.copy.targetwiki=Target Wiki
-core.copy.targetwiki.hint=Desired wiki location for the copied page
-core.copy.targetspace=Target Space 
-core.copy.targetspace.hint=Desired space location for the copied page
-core.copy.targetpage=Target Page 
-core.copy.targetpage.hint=Desired page location for the copied page
+core.copy.source.label=Source
+core.copy.source.hint=The page that is going to be copied
+core.copy.target.title.label=Copy Title
+core.copy.target.title.hint=The copy can have a different title than the source page
+core.copy.target.location.label=Copy Location
+core.copy.target.location.hint=The location were to copy the page
+core.copy.target.wiki.label=Wiki
+core.copy.target.wiki.hint=The wiki where to copy the page
+core.copy.target.parent.label=Parent
+core.copy.target.parent.hint=The parent of the copy. Leave empty if the copy should be a top level page.
+core.copy.target.name.label=Name
+core.copy.target.name.hint=The copy can have a different name than the source page
+core.copy.target.terminal.label=Copy as terminal page
+core.copy.target.terminal.hint=This type of page cannot have children and is generally used in applications, development or in older versions of XWiki.
 core.copy.allTranslations=All Translations
 core.copy.language.hint=Translation of the original page
+core.copy.children.label=Affect {0}{1} {1,choice,0#children|1#child|1<children}{2}
+core.copy.children.hint=Copy also the children of the source page
 core.copy.submit=Copy
 core.copy.cancel=Cancel
 core.copy.alreadyExists=The document {0} already exists. Are you sure you want to overwrite it (all its content would be lost)?
 core.copy.changeTarget=Change the target document
+
+### Document Picker
+core.documentPicker.title=Select Document
+core.documentPicker.select=Select
+core.documentPicker.cancel=Cancel
 
 ### Export
 core.export.pdf.options.title=PDF Export Options
@@ -4995,6 +5010,34 @@ core.create.page.space.hint=Containing space for the new page
 core.create.page=Page Name
 core.create.page.hint=Name of the new page
 core.create.pageText=NewPage
+
+### Copy UI
+core.copy.sourcewiki=Source Wiki 
+core.copy.sourcewiki.hint=Location of the original wiki
+core.copy.sourcespace=Source Space
+core.copy.sourcespace.hint=Location of the original space
+core.copy.sourcepage=Source Page
+core.copy.sourcepage.hint=Location of the original page
+core.copy.targetwiki=Target Wiki
+core.copy.targetwiki.hint=Desired wiki location for the copied page
+core.copy.targetspace=Target Space 
+core.copy.targetspace.hint=Desired space location for the copied page
+core.copy.targetpage=Target Page 
+core.copy.targetpage.hint=Desired page location for the copied page
+
+### Rename UI
+core.rename.title.newName=New document name
+core.rename.title.updateDocs=Documents having backlinks to modify
+core.rename.title.updateChildren=Documents having this document as their parent
+core.rename.inputPrompt=<new document name>
+core.rename.sourcespace = Source Space
+core.rename.sourcespace.hint = Location of the original space
+core.rename.sourcepage = Source Page
+core.rename.sourcepage.hint = Location of the original page
+core.rename.newspace=New space
+core.rename.newspace.hint=Containing space for the renamed page
+core.rename.newpage=New page
+core.rename.newpage.hint=Name of the renamed page
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
