XWIKI-12205: Add the support of nested spaces in the Javascript API.
* Add comments.

--- a/xwiki-platform-core/xwiki-platform-web/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-web/pom.xml
@@ -82,6 +82,7 @@
               <inputDir>${project.build.directory}/minimized</inputDir>
               <output>${project.build.directory}/minimized/resources/js/xwiki/xwiki-min.js</output>
               <includes>
+                <!-- entityReference.js is added first because it is used by xwiki.js -->
                 <include>**/entityReference.js</include>
                 <include>**/xwiki.js</include>
                 <include>**/modalPopup.js</include>
