XWIKI-12431: Adapt the "rename" action for nested documents XWIKI-12217: Adapt the "copy" action for nested documents * Fix typo and improve translation (thanks evalica and vmassol)

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -750,7 +750,7 @@ core.rename.links.hint=Modify the links to the source page to target the new pag
 core.rename.target.title.label=New Title
 core.rename.target.title.hint=The new page title
 core.rename.target.location.label=New Location
-core.rename.target.location.hint=The location were to move the page
+core.rename.target.location.hint=The location where to move the page
 core.rename.target.wiki.label=Wiki
 core.rename.target.wiki.hint=The wiki where to move the page
 core.rename.target.parent.label=Parent
@@ -775,7 +775,7 @@ core.copy.source.hint=The page that is going to be copied
 core.copy.target.title.label=Copy Title
 core.copy.target.title.hint=The copy can have a different title than the source page
 core.copy.target.location.label=Copy Location
-core.copy.target.location.hint=The location were to copy the page
+core.copy.target.location.hint=The location where to copy the page
 core.copy.target.wiki.label=Wiki
 core.copy.target.wiki.hint=The wiki where to copy the page
 core.copy.target.parent.label=Parent
@@ -794,7 +794,7 @@ core.copy.alreadyExists=The document {0} already exists. Are you sure you want t
 core.copy.changeTarget=Change the target document
 
 ### Document Picker
-core.documentPicker.title=Select Document
+core.documentPicker.title=Select Page
 core.documentPicker.select=Select
 core.documentPicker.cancel=Cancel
 
