--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -914,6 +914,8 @@ core.menu.share=Share by email
 core.menu.admin=Administration
 core.menu.admin.wiki=Administer Wiki
 core.menu.admin.space=Administer Space
+core.menu.admin.page=Administer Page
+core.menu.admin.parent=Administer Parent
 core.menu.editing=Editing
 core.menu.type.home=Home
 core.menu.type.wiki=Wiki
@@ -2091,7 +2093,12 @@ admin.groups.description=Manage user groups: add or remove groups, or change gro
 admin.registration=Registration
 admin.registration.description=Manage user registration settings.
 admin.rights=Rights
-admin.rights.description=Manage groups and users rights: control who can view, edit and delete pages.
+admin.rights.description=Manage groups and users rights: control who can view, edit and delete pages (and their children).
+admin.rights.info=These rights apply on this page {0}and all {1}its children{2}{3}.
+admin.pagerights=Page Rights
+admin.pagerights.description=Manage groups and users rights: control who can view, edit and delete the page. It does not affect the children.
+admin.pagerights.info=These rights apply on this page only.
+admin.pagerights.infoNonTerminalDoc=They do not affect the {0}children{1}.
 admin.userprofile=User Profile
 admin.userprofile.description=Manage what information is displayed on the user profile of each user.
 
