--- a/xwiki-platform-core/xwiki-platform-annotations/xwiki-platform-annotation-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-annotations/xwiki-platform-annotation-test/pom.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8"?>
+
 <!--
  * See the NOTICE file distributed with this work for additional
  * information regarding copyright ownership.
@@ -18,31 +19,26 @@
  * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-core</artifactId>
+    <artifactId>xwiki-platform-annotations</artifactId>
     <version>7.2-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-annotations</artifactId>
-  <name>XWiki Platform - Annotations - Parent POM</name>
+  <artifactId>xwiki-platform-annotation-test</artifactId>
+  <name>XWiki Platform - Annotations - Tests - Parent POM</name>
   <packaging>pom</packaging>
+  <description>XWiki Platform - Annotations - Tests - Parent POM</description>
+  <properties>
+    <!-- Don't run CLIRR in test modules since we don't care about backward compatibility for tests -->
+    <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Don't run Checkstyle in test modules -->
+    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
+  </properties>
   <modules>
-    <module>xwiki-platform-annotation-core</module>
-    <module>xwiki-platform-annotation-io</module>
-    <module>xwiki-platform-annotation-maintainer</module>
-    <module>xwiki-platform-annotation-reference</module>
-    <module>xwiki-platform-annotation-rest</module>
-    <module>xwiki-platform-annotation-scripting</module>
-    <module>xwiki-platform-annotation-ui</module>
+    <module>xwiki-platform-annotation-test-pageobjects</module>
+    <module>xwiki-platform-annotation-test-tests</module>
   </modules>
-  <profiles>
-    <profile>
-      <id>integration-tests</id>
-      <modules>
-        <module>xwiki-platform-annotation-test</module>
-      </modules>
-    </profile>
-  </profiles>
 </project>
