--- a/xwiki-platform-core/xwiki-platform-refactoring/xwiki-platform-refactoring-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-refactoring/xwiki-platform-refactoring-api/pom.xml
@@ -32,6 +32,8 @@
   <description>XWiki Platform - Refactoring - API</description>
   <properties>
     <xwiki.jacoco.instructionRatio>0.88</xwiki.jacoco.instructionRatio>
+    <!-- Name to display by the Extension Manager -->
+    <xwiki.extension.name>Refactoring API</xwiki.extension.name>
   </properties>
   <dependencies>
     <dependency>
