--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -514,6 +514,12 @@
               <method>org.xwiki.model.reference.DocumentReference getContentAuthorReference()</method>
               <justification>Added missing methods to the DocumentModelBridge which are already implemented by XWikiDocument.</justification>
             </difference>
+            <difference>
+              <differenceType>7002</differenceType>
+              <className>com/xpn/xwiki/XWikiCompatibilityAspect</className>
+              <method>java.lang.Object getRenderingEngine()</method>
+              <justification>Not a breakage. The legacy method was not in the right place (which mean that it was not available so it actually fix a breakage)</justification>
+            </difference>
           </ignored>
           <excludes>
             <exclude>**/internal/**</exclude>
