--- a/xwiki-platform-core/xwiki-platform-security/xwiki-platform-security-bridge/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-security/xwiki-platform-security-bridge/pom.xml
@@ -75,6 +75,7 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
+
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.xwiki.commons</groupId>
@@ -87,6 +88,13 @@
       <artifactId>xwiki-commons-environment-standard</artifactId>
       <version>${commons.version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-oldcore</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+      <type>test-jar</type>
     </dependency>
     <dependency>
       <groupId>org.jmock</groupId>
