XWIKI-12484: Remove 'space' mentions when creating a page with the dashboard template

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3770,8 +3770,8 @@ platform.dashboard.wiki.welcome=Welcome to your wiki
 platform.dashboard.wiki.personal.empty.edit=edit the dashboard section in your profile
 platform.dashboard.wiki.personal.empty=Your dashboard is currently empty. You can {0} to configure it. In the mean time, the default dashboard is displayed below.
 platform.dashboard.space=Dashboard for space {0}
-platform.dashboard.space.activity=Activity Stream for space {0}
-platform.dashboard.space.documents=Documents in space {0}
+platform.dashboard.gadget.activity.title=Activity Stream for {0}
+platform.dashboard.gadget.documents.title=Documents in {0}
 platform.dashboard.space.remainingDocumentsInSpace=and {0} {0,choice,1#more document|1<more documents} in space {1}
 platform.dashboard.space.visitSpaceIndex=visit the Space Index to see the full list
 platform.dashboard.space.templateName=Space Dashboard
@@ -5045,6 +5045,18 @@ core.rename.newspace=New space
 core.rename.newspace.hint=Containing space for the renamed page
 core.rename.newpage=New page
 core.rename.newpage.hint=Name of the renamed page
+
+#######################################
+## until 7.2M3
+#######################################
+
+### Dashboard
+
+#@deprecated platform.dashboard.space.documents
+platform.dashboard.space.documents=Documents in space {0}
+
+#@deprecated platform.dashboard.space.activity
+platform.dashboard.space.activity=Activity Stream for space {0}
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
