--- a/xwiki-platform-core/xwiki-platform-faq/xwiki-platform-faq-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-faq/xwiki-platform-faq-ui/pom.xml
@@ -85,6 +85,14 @@
       <type>xar</type>
       <scope>runtime</scope>
     </dependency>
+    <!-- Search features requires the Search UI to be present to work fine -->
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-search-ui</artifactId>
+      <version>${project.version}</version>
+      <type>xar</type>
+      <scope>runtime</scope>
+    </dependency>
     <!-- The Panels application is an optional dependency since the FAQ application can work even if it's not present but if it's
          there then it'll register in it. -->
     <dependency>
