XWIKI-12518: Rename XWiki space's title from "XWiki Space" to "XWiki"

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3183,10 +3183,10 @@ xe.themes.colors.wizard.reset=Reset
 xe.themes.colors.wizard.close=Close
 xe.themes.colors.wizard.undo=Undo
 
-xe.xwiki.space=XWiki Space
+xe.xwiki.space=XWiki
 xe.xwiki.space.preferences=XWiki Space Preferences
 xe.xwiki.administration=Administration application
-xe.xwiki.administration.install=The XWiki space contains documents used by XWiki for its own use. You can administer your wiki through the {0}.
+xe.xwiki.administration.install=This page and its children contain internal content used by XWiki for its own use. It also currently contains the User Profile pages. You can administer your wiki through the {0}.
 
 ### Monitor
 xe.monitor=XWiki Requests Status
