XWIKI-12459: Set the home page title of the main wiki and subwikis to be "Home" by default

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1987,7 +1987,7 @@ tags.save.error=An error occurred while saving tags
 core.links.content=Content
 
 # Home
-xe.home.title=Wiki Home
+xe.home.title=Home
 
 # Recent Members (XWiki Enterprise wiki)
 xe.recentmembers=Recent Members
