--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -735,6 +735,12 @@ core.create.template.allowedspace.inline=Allowed space for ''{0}'': {1}
 core.create.terminal.label=Terminal Page
 core.create.terminal.hint=Advanced: Create a terminal page instead. This type of page will not be able to have children and is generally used in applications, development or in older versions of XWiki.
 
+core.create.type=Page Type
+core.create.type.default=Default
+core.create.type.templates=Templates
+core.create.type.blank=Blank page
+core.create.type.blank.description=Standard empty page
+
 core.create.ajax.error=An error occurred, please refresh the page and try again
 core.create.page.error.docalreadyexists=The page <a href="{1}">{0}</a> already exists. You can fill in a new page name (or <a href="{2}">edit {0}</a>).
 core.create.space.error.docalreadyexists=The space {0} already exists. Please fill in a new space name.
