--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -741,6 +741,8 @@ core.create.type.templates=Templates
 core.create.type.blank=Blank page
 core.create.type.blank.description=Standard empty page
 
+core.create.popup.loading=Loading...
+
 core.create.ajax.error=An error occurred, please refresh the page and try again
 core.create.page.error.docalreadyexists=The page <a href="{1}">{0}</a> already exists. You can fill in a new page name (or <a href="{2}">edit {0}</a>).
 core.create.space.error.docalreadyexists=The space {0} already exists. Please fill in a new space name.
