XWIKI-12484: Remove 'space' mentions when creating a page with the dashboard template * Added the new key in deprecated area

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -5052,10 +5052,10 @@ core.rename.newpage.hint=Name of the renamed page
 
 ### Dashboard
 
-#@deprecated platform.dashboard.space.documents
+#@deprecated platform.dashboard.gadget.documents.title
 platform.dashboard.space.documents=Documents in space {0}
 
-#@deprecated platform.dashboard.space.activity
+#@deprecated platform.dashboard.gadget.activity.title
 platform.dashboard.space.activity=Activity Stream for space {0}
 
 ## Used to indicate where deprecated keys end
