XE-1497: Make the Home Page display in a nicer way for Nested Documents * Replace the usage of the Spaces macro with the Document Tree Macro on the wiki dashboard.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3770,7 +3770,7 @@ platform.linkchecker.livetable.date=Last Checked
 platform.dashboard.user.preferences=Dashboard preferences
 platform.dashboard.user.displayOnMainPage=Display my dashboard on the wiki home when I'm logged in (instead of the default dashboard)
 platform.dashboard.wiki=Dashboard
-platform.dashboard.wiki.spaces=Spaces
+platform.dashboard.wiki.pages=Pages
 platform.dashboard.wiki.tagcloud=Tags
 platform.dashboard.wiki.activity=Activity Stream
 platform.dashboard.wiki.messageSender=Send Message
@@ -5053,6 +5053,12 @@ core.rename.newspace=New space
 core.rename.newspace.hint=Containing space for the renamed page
 core.rename.newpage=New page
 core.rename.newpage.hint=Name of the renamed page
+
+#######################################
+## until 7.2M3
+#######################################
+
+platform.dashboard.wiki.spaces=Spaces
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
