XWIKI-12452: Remove or rename "Space Dashboard" that appears when creating a page

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3774,7 +3774,7 @@ platform.dashboard.space.activity=Activity Stream for space {0}
 platform.dashboard.space.documents=Documents in space {0}
 platform.dashboard.space.remainingDocumentsInSpace=and {0} {0,choice,1#more document|1<more documents} in space {1}
 platform.dashboard.space.visitSpaceIndex=visit the Space Index to see the full list
-platform.dashboard.space.templateName=Space Dashboard
+platform.dashboard.space.templateName=Dashboard
 
 ### Extension Manager
 extensions.actions.showDetails=Show details
