XWIKI-12530: Remove space and document mentions from Tags

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1947,7 +1947,7 @@ xe.tag.tags=Tags
 xe.tag.tagclass=XWiki Tag Class
 xe.tag.tagcloud=Tag Cloud
 xe.tag.notags=No page has been tagged yet
-xe.tag.notagsforspace=No page has been tagged yet in this space
+xe.tag.notagsforspace=No tag has been added on this page or on its children
 xe.tag.tooltip={0} pages
 xe.tag.alldocs=All pages tagged with {0}
 xe.tag.activity=Activity Stream for pages tagged with {0}
@@ -3772,6 +3772,7 @@ platform.dashboard.user.displayOnMainPage=Display my dashboard on the wiki home 
 platform.dashboard.wiki=Dashboard
 platform.dashboard.wiki.pages=Pages
 platform.dashboard.wiki.tagcloud=Tags
+platform.dashboard.wiki.tagsgadget=Tags for {0}
 platform.dashboard.wiki.activity=Activity Stream
 platform.dashboard.wiki.messageSender=Send Message
 platform.dashboard.wiki.welcome=Welcome to your wiki
