--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1366,6 +1366,9 @@ core.children.terminalPage=This page is a terminal page that cannot have childre
 core.children.parentChildDescription=Pages having this page as parent:
 core.children.parentChildNoChild=This page does not have any child based on the parent/child mechanism.
 
+## Siblings of a document
+core.siblings.title=Siblings of {0}
+
 ## Backlinks
 core.backlinks.title=Backlinks to {0}
 core.backlinks.description=Pages having a link to this page:
@@ -1987,6 +1990,8 @@ docextra.backlinks=Backlinks
 docextra.creation=Creation
 docextra.createdby=by {0} on {1}
 docextra.includedpages=Included pages
+docextra.children=Children
+docextra.siblings=Siblings
 core.tagedit.title=Tags
 tags.save=Save
 tags.save.success=Tags saved successfuly
@@ -3034,6 +3039,7 @@ platform.index.attachmentsResults=Attachments JSON Service
 
 ### Livetable Column Labels (translationPrefix == "platform.index.")
 platform.index.doc.name=Page
+platform.index.doc.location=Location
 platform.index.doc.space=Space
 platform.index.doc.date=Date
 platform.index.doc.author=Last Author
