XWIKI-12530: Remove space and document mentions from Tags

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3772,7 +3772,6 @@ platform.dashboard.user.displayOnMainPage=Display my dashboard on the wiki home 
 platform.dashboard.wiki=Dashboard
 platform.dashboard.wiki.pages=Pages
 platform.dashboard.wiki.tagcloud=Tags
-platform.dashboard.wiki.tagsgadget=Tags for {0}
 platform.dashboard.wiki.activity=Activity Stream
 platform.dashboard.wiki.messageSender=Send Message
 platform.dashboard.wiki.welcome=Welcome to your wiki
@@ -3783,6 +3782,7 @@ platform.dashboard.space.activity=Activity Stream for {0}
 platform.dashboard.space.documents=Pages in {0}
 platform.dashboard.space.remainingDocumentsInSpace=and {0} {0,choice,1#more page|1<more pages} in space {1}
 platform.dashboard.space.visitSpaceIndex=visit the Space Index to see the full list
+platform.dashboard.space.tagcloud=Tags for {0}
 platform.dashboard.space.templateName=Dashboard
 
 ### Extension Manager
