--- a/xwiki-platform-core/xwiki-platform-filter/xwiki-platform-filter-instance/xwiki-platform-filter-instance-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-filter/xwiki-platform-filter-instance/xwiki-platform-filter-instance-api/pom.xml
@@ -32,6 +32,9 @@
   <description>Extract data from the current XWiki instance</description>
   <properties>
     <xwiki.jacoco.instructionRatio>0.00</xwiki.jacoco.instructionRatio>
+
+    <!-- Name to display by the Extension Manager -->
+    <xwiki.extension.name>Filter XWiki Instance module</xwiki.extension.name>
   </properties>
   <dependencies>
     <dependency>
