XWIKI-12332: Add support for Nested Spaces in Office component.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1375,6 +1375,7 @@ core.backlinks.description=Pages having a link to this page:
 core.backlinks.noBackLink=There is no backlink to this page.
 
 core.recyclebin.showlistmsg=The following versions are in the recycle bin:
+core.recyclebin.showListTerminalPagesMsg=The following versions of terminal pages are in the recycle bin:
 core.recyclebin.deleter=Deleter
 core.recyclebin.actions=Actions
 core.recyclebin.deleteDate=Deletion Date
