--- a/xwiki-platform-core/xwiki-platform-office/xwiki-platform-office-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-office/xwiki-platform-office-test/pom.xml
@@ -24,41 +24,21 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.xwiki.platform</groupId>
-    <artifactId>xwiki-platform-core</artifactId>
+    <artifactId>xwiki-platform-office</artifactId>
     <version>7.3-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-office</artifactId>
-  <name>XWiki Platform - Office - Parent POM</name>
+  <artifactId>xwiki-platform-office-test</artifactId>
+  <name>XWiki Platform - Office - Test - Parent POM</name>
   <packaging>pom</packaging>
-  <description>XWiki Platform - Office - Parent POM</description>
+  <description>XWiki Platform - Office - Test -Parent POM</description>
   <modules>
-    <module>xwiki-platform-office-importer</module>
-    <module>xwiki-platform-office-viewer</module>
-    <module>xwiki-platform-office-macro</module>
-    <module>xwiki-platform-office-ui</module>
+    <module>xwiki-platform-office-test-pageobjects</module>
+    <module>xwiki-platform-office-test-tests</module>
   </modules>
-  <dependencies>
-    <dependency>
-      <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-component-api</artifactId>
-      <version>${commons.version}</version>
-    </dependency>
-  </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <!-- Apply the Checkstyle configurations defined in the top level pom.xml file -->
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
-  <profiles>
-    <profile>
-      <id>integration-tests</id>
-      <modules>
-        <module>xwiki-platform-office-test</module>
-      </modules>
-    </profile>
-  </profiles>
+  <properties>
+    <!-- Don't run CLIRR in test modules since we don't care about backward compatibility for tests -->
+    <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Don't run Checkstyle in test modules -->
+    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
+  </properties>
 </project>
