--- a/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-server/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-rest/xwiki-platform-rest-server/pom.xml
@@ -160,6 +160,7 @@
             org/xwiki/rest/Constants.java,
             org/xwiki/rest/internal/Constants.java,
             org/xwiki/rest/internal/DomainObjectFactory.java,
+            org/xwiki/rest/internal/ModelFactory.java,
             org/xwiki/rest/internal/exceptions/QueryExceptionMapper.java,
             org/xwiki/rest/internal/exceptions/XWikiExceptionMapper.java,
             org/xwiki/rest/internal/RangeIterable.java,
