--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -930,8 +930,8 @@ core.menu.type.wiki=Wiki
 core.menu.type.space=Space
 core.menu.type.page=Page
 core.menu.type.profile=Profile
-core.menu.wiki.documentindex=Document Index
-core.menu.space.documentindex=Document Index
+core.menu.wiki.documentindex=Page Index
+core.menu.space.documentindex=Page Index
 core.menu.space.delete=Delete
 ### Translations used from web standard templates, not colibri
 core.menu.view=View
@@ -2879,7 +2879,7 @@ xe.panels.wizard.homepage=Go to Panels home page
 xe.panels.edit=(Edit this panel)
 xe.panels.quicklinks=Quick Links
 xe.panels.quicklinks.dashboard=Dashboard
-xe.panels.quicklinks.index=Document Index
+xe.panels.quicklinks.index=Page Index
 xe.panels.quicklinks.blog=Blog
 xe.panels.quicklinks.sandbox=Sandbox
 xe.panels.quicklinks.userdirectory=User Index
