--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -531,6 +531,8 @@
             <exclude>**/internal/**</exclude>
             <exclude>**/test/**</exclude>
             <!-- Remove the following excludes after we release the current version as final -->
+            <!-- XMLRPC code has been moved to another module, this is not an API breakage -->
+            <exclude>**/com/xpn/xwiki/xmlrpc/**</exclude>
           </excludes>
         </configuration>
       </plugin>
