XWIKI-12332: Add support for Nested Spaces in the Office Importer UI.
* Functional tests for the office module now have their own maven profile (office-tests instead of integration-tests).

The reasoning is that these tests need to have an office server installed on the machine which executes them, and it is not always the case.
We do not want to break the build only because the developer does not have an office server.

--- a/xwiki-platform-core/xwiki-platform-office/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-office/pom.xml
@@ -55,7 +55,7 @@
   </build>
   <profiles>
     <profile>
-      <id>integration-tests</id>
+      <id>office-tests</id>
       <modules>
         <module>xwiki-platform-office-test</module>
       </modules>
